// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs by run, experiment, and type all at once 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular experiment 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular experiment 2`] = `
[
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular run 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular run 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs of a particular type 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs of a particular type 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should ignore missing logs 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 11,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 22,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 33,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 44,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return logs added after resuming 1`] = `
[
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 2,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return logs overwriting other logs after resuming 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 1,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 2,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return the logs in order of experimentName, runName, and ascending number 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return the logs in order of experimentName, runName, and ascending number 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs by run, experiment, and type all at once 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular experiment 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular experiment 2`] = `
[
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular run 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular run 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs of a particular type 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs of a particular type 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should ignore missing logs 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 11,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 22,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 33,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment2",
    "number": 44,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return logs added after resuming 1`] = `
[
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 2,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return logs overwriting other logs after resuming 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 1,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 2,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return the logs in order of experimentName, runName, and ascending number 1`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return the logs in order of experimentName, runName, and ascending number 2`] = `
[
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 3,
    "runId": 1,
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentName": "experiment1",
    "number": 1,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentName": "experiment1",
    "number": 2,
    "runId": 2,
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentName": "experiment2",
    "number": 1,
    "runId": 3,
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;
